--- a/packages/esm-tb-app/src/views/patient-summary/recent-tb-config.json
+++ b/packages/esm-tb-app/src/views/patient-summary/recent-tb-config.json
@@ -41,7 +41,7 @@
       "encounterTypes": [
         "tbProgramEnrollment"
       ],
-      "concept": "tbProgramEnrollment"
+      "concept": "drugSensitivity"
     },
     {
       "id": "regimen",
