(chore) Add ESLint Rules for React-Hooks (#1862)
* Updated Husky files (pre-commit, pre-push) and package.json for lint-staged integration to improve code quality checks.

* Changes for ESLint rules

* Changes for ESLint rules

* Contd Changes for ESLint react-hooks/exhaustive-deps

* Contd Changes for ESLint react-hooks/exhaustive-deps

* Changes based on PR review

* Contd changes based on PR review

* Contd changes based on PR review

--- a/package.json
+++ b/package.json
@@ -102,6 +102,10 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.8.1"
   },
+  "lint-staged": {
+    "packages/**/src/**/*.{ts,tsx}": "eslint --cache --fix --max-warnings 0",
+    "*.{css,scss,ts,tsx}": "prettier --write --list-different"
+  },
   "resolutions": {
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5"
